templates/service/k8s/overlays/batch-only/delete/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "{@ service_kebab @}-service"
$patch: delete
